@@ -28,6 +28,9 @@ Trunk (unreleased changes)
 
     HDFS-660. Remove deprecated methods from InterDatanodeProtocol. (shv)
 
+    HDFS-512. Block.equals() and compareTo() compare blocks based
+    only on block Ids, ignoring generation stamps. (shv)
+
   NEW FEATURES
 
     HDFS-436. Introduce AspectJ framework for HDFS code and tests.
